B&L QA/objects/Dashboard_Router__c.object
<CustomObject>
    <description>INDSU record type to maintain dashboard name and map url to drill down to multiple dashboards</description>
    <fields>
        <fullName>Chart_Description__c</fullName>
        <description>INDSU field to capture the description on the chart</description>
        <label>Chart Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chart_Name__c</fullName>
        <description>INDSU field to capture the chart name</description>
        <label>Chart Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col_To_Point_To__c</fullName>
        <description>INDSU field to capture the column of the dashboard to point to</description>
        <label>Col To Point To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dashboard_Id_To_Open__c</fullName>
        <description>INDSU field to capture the SF ID of the dashboard to open on clicking on the chart</description>
        <label>Dashboard Id To Open</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_To_Open__c</fullName>
        <description>INDSU field to capture the name of the dashboard to open on clicking on the chart</description>
        <label>Dashboard To Open</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <description>INDSU field to capture the name of the dashboard the chart belongs to.</description>
        <label>Dashboard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Row_To_Point_To__c</fullName>
        <description>INDSU field to capture the row of the dashboard to point to</description>
        <label>Row To Point To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dashboard Router</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{0000000}</displayFormat>
        <label>Chart Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dashboard Router</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Dashboard_Router</fullName>
        <active>true</active>
        <description>APACSU record type to maintain dashboard name and map url to drill down to multiple dashboards</description>
        <label>APACSU Dashboard Router</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Dashboard_Router</fullName>
        <active>true</active>
        <description>INDSU record type to maintain dashboard name and map url to drill down to multiple dashboards</description>
        <label>INDSU Dashboard Router</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>